[gd_scene load_steps=8 format=3 uid="uid://c3lwgi213uyum"]

[ext_resource type="Script" uid="uid://dtiaag7qwilec" path="res://Main/Main.gd" id="1_av3j2"]
[ext_resource type="Texture2D" uid="uid://b2p74yoxy1ol" path="res://Player/FlappyBirdCharSprite.png" id="2_gjcv8"]
[ext_resource type="Texture2D" uid="uid://bmnmcs0a5snlu" path="res://Background/FlappyBirdBackground.png" id="2_nqnf8"]
[ext_resource type="AudioStream" uid="uid://wrgotdnh7hj" path="res://Music/Trophy Gallery - Super Smash Bros. Brawl.mp3" id="4_xnltt"]
[ext_resource type="FontFile" uid="uid://bj3lxnkh5ecwc" path="res://using_fonts_monospace_bitmap_font_example.webp" id="5_n4rfb"]
[ext_resource type="VideoStream" uid="uid://mamx48q3nuvg" path="res://Main/IAteThebfiweuaobfuiwea.ogv" id="6_q12ug"]

[sub_resource type="LabelSettings" id="LabelSettings_g55bo"]
font = ExtResource("5_n4rfb")
font_size = 40
font_color = Color(0.94902, 0.901961, 0, 1)
shadow_size = 15
shadow_color = Color(0.345098, 0.301961, 0.152941, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_av3j2")

[node name="FlappyBirdBackground" type="Sprite2D" parent="."]
position = Vector2(270, 480)
texture = ExtResource("2_nqnf8")
metadata/_edit_lock_ = true

[node name="FlappyBirdCharSprite" type="Sprite2D" parent="."]
position = Vector2(256, 442)
rotation = -0.314159
scale = Vector2(13.87, 13.87)
texture = ExtResource("2_gjcv8")
metadata/_edit_lock_ = true

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xnltt")
autoplay = true

[node name="Main Title" type="Label" parent="."]
offset_left = 32.0
offset_top = 141.0
offset_right = 512.0
offset_bottom = 224.0
text = "Get Addicted
Bitch"
label_settings = SubResource("LabelSettings_g55bo")
horizontal_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="Croissant" type="VideoStreamPlayer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_right = 2712.0
offset_bottom = 4800.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
stream = ExtResource("6_q12ug")
autoplay = true
paused = true
expand = true
buffering_msec = 10
metadata/_edit_lock_ = true

[node name="EasterEgg" type="Button" parent="."]
visible = false
offset_left = 296.0
offset_top = 385.0
offset_right = 310.0
offset_bottom = 413.0
rotation = -0.305274
metadata/_edit_lock_ = true

[node name="Play" type="Button" parent="."]
offset_left = 64.0
offset_top = 704.0
offset_right = 192.0
offset_bottom = 767.0
button_mask = 3
text = "Play"
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="."]
offset_left = 356.0
offset_top = 704.0
offset_right = 484.0
offset_bottom = 768.0
text = "Quit
"
metadata/_edit_lock_ = true

[connection signal="pressed" from="EasterEgg" to="." method="_on_easter_egg_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
